# SUT_DOCR-Analyzer

./: .dockerignore  .env  .env.example  .gitignore  .version  0_문서_읽기_가이드.md  1_README_시작가이드.md  2_프로젝트_완성_요약.md  7_구현_완료_체크리스트.md  8_최종_정리_및_검증_보고서.md  Claude_Code_Complete_Guide.md  DOCKER_INSTALL.md  Dockerfile.wsl2  README.md  claude_migration_success.md  claude_native_migration.md  claude_stable_setup.md  environment.yml  example_usage.py  install_deepseek_macos.sh  main.py  pyproject.toml  requirements.txt  runpod_setup.sh  runpod_test.py  setup_deepseek_macos.sh
.claude/: settings.local.json
claudedocs/: SESSION_2025-10-23_프로젝트_완성_및_정리.md
configs/: deepseek_config.yaml  pipeline_config.yaml
data_store/: README_JSON_SCHEMA.md
docs/: 3_전체_설계_및_전략.md  4_구현_상태_상세.md  6_RunPod_배포_상세.md  Code_Integration_Analysis.md  IMPLEMENTATION_STRATEGY_2025-10-28.md  REFACTORING_PLAN.md  VLLM_MIGRATION_STRATEGY_2025-10-28.md
runpod/: 5_RunPod_배포_가이드.md  DEPENDENCIES.md  process.py  setup.sh  verify_model_import.py
scripts/: _THIS_FOLDER_IS_ONLY_FOR_DEV.md  src_make.py  wheel_save.py
src/deepseek_ocr/cli/: __init__.py  main.py
src/deepseek_ocr/core/: __init__.py  config.py  types.py  utils.py
src/deepseek_ocr/engine/: __init__.py  deepseek_engine.py  deepseek_engine.py.backup  deepseek_vllm_engine.py  image_processor.py  logits_processor.py  prompts.py
src/deepseek_ocr/pipeline/: __init__.py  element_analyzer.py  element_analyzer_vllm.py  markdown_parser.py  pdf_parser.py  structure_analyzer.py  structure_analyzer_vllm.py  text_enricher.py
src/deepseek_ocr/vllm_model/: __init__.py  deepseek_ocr_model.py
src/deepseek_ocr/vllm_model/deepencoder/: __init__.py
src/mypkg/cli/: README.md  main.py
src/mypkg/components/analyzer/: diagram_analyzer.py  document_metadata_analyzer.py  layout_assembler.py  list_table_analyzer.py  section_analyzer.py
src/mypkg/components/analyzer/docs/: DETAILS_OF_DIAGRAM_FIELD.md  DIAGRAM.md  DOC_META.md  LAYOUT_ASSEMBLER.md  LIST_AND_TABLE.md  SECTION.md
src/mypkg/components/parser/: docx_parser.py  xml_parser.py
src/mypkg/components/sanitizer/: diagram_sanitizer.py  paragraph_sanitizer.py  table_sanitizer.py
src/mypkg/core/: base_parser.py  docjson_types.py  io.py
src/mypkg/pipelines/: docx_parsing_pipeline.py  layout_analyzer_pipeline.py
src/mypkg/tests/: README.md  test_docx_parser.py  test_sanitizers.py  test_xml_parser.py
src/mypkg/tests/fixtures/: sample.docx  sample1_header.docx  sample1_table.docx  sample2_section.docx
tests/: README_RISK_TESTS.md  run_risk_tests.sh  test_figure_classification.py  test_integration.py  test_label_detection.py  test_text_preview.py  validate_code.py
